--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ click==8.1.7
 filelock==3.13.1
 Flask==3.1.0
 fsspec==2024.10.0
+gmpy2==2.1.2
+gunicorn==23.0.0
 huggingface-hub==0.26.5
 idna==3.7
 itsdangerous==2.2.0
@@ -13,24 +15,31 @@ Jinja2==3.1.4
 MarkupSafe==2.1.3
 mkl_fft==1.3.11
 mkl_random==1.2.8
-mkl-service==2.4.1
+mkl-service==2.4.0
 mpmath==1.3.0
 networkx==3.2.1
 numpy==2.0.1
+opencv-python==4.11.0.86
 packaging==24.2
 pillow==11.0.0
 pip==24.2
 PySocks==1.7.1
 PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
 safetensors==0.4.5
 setuptools==75.1.0
 sympy==1.13.1
 timm==1.0.12
+tokenizers==0.21.0
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
 tqdm==4.67.1
+transformers==4.48.1
 triton==3.1.0
 typing_extensions==4.11.0
 urllib3==2.2.3
 Werkzeug==3.1.3
 wheel==0.44.0
-gunicorn==23.0.0
+xformers==0.0.28.post3
