--- a/mappings.json
+++ b/mappings.json
@@ -33,7 +33,7 @@
         "NULL",
         "parked bike",
         "parked car",
-        "parked-scooter/motorcycle",
+        "parked scooter/motorcycle",
         "pole",
         "sign",
         "stairs",
